namespace/games/gamevault/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gamevault
  namespace: games
  labels:
    app.kubernetes.io/name: gamevault
spec:
  selector:
    app.kubernetes.io/name: gamevault
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: gamevault
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: gamevault-postgres
  namespace: games
  labels:
    app.kubernetes.io/name: gamevault-postgres
spec:
  selector:
    app.kubernetes.io/name: gamevault-postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
