namespace/games/gamevault/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gamevault-https
  namespace: games
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gamevault.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
        - name: authentik
          namespace: traefik
      services:
        - name: gamevault
          port: 8080
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gamevault-http
  namespace: games
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`gamevault.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
        - name: redirect-https
          namespace: traefik
      services:
        - name: gamevault
          port: 8080
